// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Month/> Dates shows given \`startDate\` as selected 1`] = `
<Month>
  <Row>
    <Cell>
      <NavButton
        onClick={[Function]}
      >
        ←
      </NavButton>
    </Cell>
    <Cell
      justifyContent="center"
      span={5}
    >
      January 2017
    </Cell>
    <Cell>
      <NavButton
        onClick={[Function]}
      >
        →
      </NavButton>
    </Cell>
  </Row>
  <Row>
    <Cell
      key="January-2017-day-0"
    >
      Su
    </Cell>
    <Cell
      key="January-2017-day-1"
    >
      Mo
    </Cell>
    <Cell
      key="January-2017-day-2"
    >
      Tu
    </Cell>
    <Cell
      key="January-2017-day-3"
    >
      We
    </Cell>
    <Cell
      key="January-2017-day-4"
    >
      Th
    </Cell>
    <Cell
      key="January-2017-day-5"
    >
      Fr
    </Cell>
    <Cell
      key="January-2017-day-6"
    >
      Sa
    </Cell>
  </Row>
  <Row
    justifyContent="flex-end"
    key="January-2017-0"
  >
    <Day
      inRange={false}
      key="January-2017-0-0"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      1
    </Day>
    <Day
      inRange={false}
      key="January-2017-0-1"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      2
    </Day>
    <Day
      inRange={false}
      key="January-2017-0-2"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      3
    </Day>
    <Day
      inRange={false}
      key="January-2017-0-3"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      4
    </Day>
    <Day
      inRange={false}
      key="January-2017-0-4"
      onClick={[Function]}
      onMouseEnter={[Function]}
      selected={true}
    >
      5
    </Day>
    <Day
      key="January-2017-0-5"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      6
    </Day>
    <Day
      key="January-2017-0-6"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      7
    </Day>
  </Row>
  <Row
    justifyContent="flex-start"
    key="January-2017-1"
  >
    <Day
      key="January-2017-1-0"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      8
    </Day>
    <Day
      key="January-2017-1-1"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      9
    </Day>
    <Day
      key="January-2017-1-2"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      10
    </Day>
    <Day
      key="January-2017-1-3"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      11
    </Day>
    <Day
      key="January-2017-1-4"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      12
    </Day>
    <Day
      key="January-2017-1-5"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      13
    </Day>
    <Day
      key="January-2017-1-6"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      14
    </Day>
  </Row>
  <Row
    justifyContent="flex-start"
    key="January-2017-2"
  >
    <Day
      key="January-2017-2-0"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      15
    </Day>
    <Day
      key="January-2017-2-1"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      16
    </Day>
    <Day
      key="January-2017-2-2"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      17
    </Day>
    <Day
      key="January-2017-2-3"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      18
    </Day>
    <Day
      key="January-2017-2-4"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      19
    </Day>
    <Day
      key="January-2017-2-5"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      20
    </Day>
    <Day
      key="January-2017-2-6"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      21
    </Day>
  </Row>
  <Row
    justifyContent="flex-start"
    key="January-2017-3"
  >
    <Day
      key="January-2017-3-0"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      22
    </Day>
    <Day
      key="January-2017-3-1"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      23
    </Day>
    <Day
      key="January-2017-3-2"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      24
    </Day>
    <Day
      key="January-2017-3-3"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      25
    </Day>
    <Day
      key="January-2017-3-4"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      26
    </Day>
    <Day
      key="January-2017-3-5"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      27
    </Day>
    <Day
      key="January-2017-3-6"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      28
    </Day>
  </Row>
  <Row
    justifyContent="flex-start"
    key="January-2017-4"
  >
    <Day
      key="January-2017-4-0"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      29
    </Day>
    <Day
      key="January-2017-4-1"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      30
    </Day>
    <Day
      key="January-2017-4-2"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      31
    </Day>
  </Row>
  <Row
    justifyContent="flex-start"
    key="January-2017-5"
  />
</Month>
`;

exports[`<Month/> Dates shows range when \`startDate\` and \`endDate\` are given 1`] = `
<Month>
  <Row>
    <Cell>
      <NavButton
        onClick={[Function]}
      >
        ←
      </NavButton>
    </Cell>
    <Cell
      justifyContent="center"
      span={5}
    >
      January 2017
    </Cell>
    <Cell>
      <NavButton
        onClick={[Function]}
      >
        →
      </NavButton>
    </Cell>
  </Row>
  <Row>
    <Cell
      key="January-2017-day-0"
    >
      Su
    </Cell>
    <Cell
      key="January-2017-day-1"
    >
      Mo
    </Cell>
    <Cell
      key="January-2017-day-2"
    >
      Tu
    </Cell>
    <Cell
      key="January-2017-day-3"
    >
      We
    </Cell>
    <Cell
      key="January-2017-day-4"
    >
      Th
    </Cell>
    <Cell
      key="January-2017-day-5"
    >
      Fr
    </Cell>
    <Cell
      key="January-2017-day-6"
    >
      Sa
    </Cell>
  </Row>
  <Row
    justifyContent="flex-end"
    key="January-2017-0"
  >
    <Day
      inRange={false}
      key="January-2017-0-0"
      onClick={[Function]}
      onMouseEnter={[Function]}
      selected={false}
    >
      1
    </Day>
    <Day
      inRange={false}
      key="January-2017-0-1"
      onClick={[Function]}
      onMouseEnter={[Function]}
      selected={false}
    >
      2
    </Day>
    <Day
      inRange={false}
      key="January-2017-0-2"
      onClick={[Function]}
      onMouseEnter={[Function]}
      selected={false}
    >
      3
    </Day>
    <Day
      inRange={false}
      key="January-2017-0-3"
      onClick={[Function]}
      onMouseEnter={[Function]}
      selected={false}
    >
      4
    </Day>
    <Day
      inRange={false}
      key="January-2017-0-4"
      onClick={[Function]}
      onMouseEnter={[Function]}
      selected={true}
    >
      5
    </Day>
    <Day
      inRange={true}
      key="January-2017-0-5"
      onClick={[Function]}
      onMouseEnter={[Function]}
      selected={false}
    >
      6
    </Day>
    <Day
      inRange={true}
      key="January-2017-0-6"
      onClick={[Function]}
      onMouseEnter={[Function]}
      selected={false}
    >
      7
    </Day>
  </Row>
  <Row
    justifyContent="flex-start"
    key="January-2017-1"
  >
    <Day
      inRange={true}
      key="January-2017-1-0"
      onClick={[Function]}
      onMouseEnter={[Function]}
      selected={false}
    >
      8
    </Day>
    <Day
      inRange={true}
      key="January-2017-1-1"
      onClick={[Function]}
      onMouseEnter={[Function]}
      selected={false}
    >
      9
    </Day>
    <Day
      inRange={true}
      key="January-2017-1-2"
      onClick={[Function]}
      onMouseEnter={[Function]}
      selected={false}
    >
      10
    </Day>
    <Day
      inRange={false}
      key="January-2017-1-3"
      onClick={[Function]}
      onMouseEnter={[Function]}
      selected={true}
    >
      11
    </Day>
    <Day
      inRange={false}
      key="January-2017-1-4"
      onClick={[Function]}
      onMouseEnter={[Function]}
      selected={false}
    >
      12
    </Day>
    <Day
      inRange={false}
      key="January-2017-1-5"
      onClick={[Function]}
      onMouseEnter={[Function]}
      selected={false}
    >
      13
    </Day>
    <Day
      inRange={false}
      key="January-2017-1-6"
      onClick={[Function]}
      onMouseEnter={[Function]}
      selected={false}
    >
      14
    </Day>
  </Row>
  <Row
    justifyContent="flex-start"
    key="January-2017-2"
  >
    <Day
      inRange={false}
      key="January-2017-2-0"
      onClick={[Function]}
      onMouseEnter={[Function]}
      selected={false}
    >
      15
    </Day>
    <Day
      inRange={false}
      key="January-2017-2-1"
      onClick={[Function]}
      onMouseEnter={[Function]}
      selected={false}
    >
      16
    </Day>
    <Day
      inRange={false}
      key="January-2017-2-2"
      onClick={[Function]}
      onMouseEnter={[Function]}
      selected={false}
    >
      17
    </Day>
    <Day
      inRange={false}
      key="January-2017-2-3"
      onClick={[Function]}
      onMouseEnter={[Function]}
      selected={false}
    >
      18
    </Day>
    <Day
      inRange={false}
      key="January-2017-2-4"
      onClick={[Function]}
      onMouseEnter={[Function]}
      selected={false}
    >
      19
    </Day>
    <Day
      inRange={false}
      key="January-2017-2-5"
      onClick={[Function]}
      onMouseEnter={[Function]}
      selected={false}
    >
      20
    </Day>
    <Day
      inRange={false}
      key="January-2017-2-6"
      onClick={[Function]}
      onMouseEnter={[Function]}
      selected={false}
    >
      21
    </Day>
  </Row>
  <Row
    justifyContent="flex-start"
    key="January-2017-3"
  >
    <Day
      inRange={false}
      key="January-2017-3-0"
      onClick={[Function]}
      onMouseEnter={[Function]}
      selected={false}
    >
      22
    </Day>
    <Day
      inRange={false}
      key="January-2017-3-1"
      onClick={[Function]}
      onMouseEnter={[Function]}
      selected={false}
    >
      23
    </Day>
    <Day
      inRange={false}
      key="January-2017-3-2"
      onClick={[Function]}
      onMouseEnter={[Function]}
      selected={false}
    >
      24
    </Day>
    <Day
      inRange={false}
      key="January-2017-3-3"
      onClick={[Function]}
      onMouseEnter={[Function]}
      selected={false}
    >
      25
    </Day>
    <Day
      inRange={false}
      key="January-2017-3-4"
      onClick={[Function]}
      onMouseEnter={[Function]}
      selected={false}
    >
      26
    </Day>
    <Day
      inRange={false}
      key="January-2017-3-5"
      onClick={[Function]}
      onMouseEnter={[Function]}
      selected={false}
    >
      27
    </Day>
    <Day
      inRange={false}
      key="January-2017-3-6"
      onClick={[Function]}
      onMouseEnter={[Function]}
      selected={false}
    >
      28
    </Day>
  </Row>
  <Row
    justifyContent="flex-start"
    key="January-2017-4"
  >
    <Day
      inRange={false}
      key="January-2017-4-0"
      onClick={[Function]}
      onMouseEnter={[Function]}
      selected={false}
    >
      29
    </Day>
    <Day
      inRange={false}
      key="January-2017-4-1"
      onClick={[Function]}
      onMouseEnter={[Function]}
      selected={false}
    >
      30
    </Day>
    <Day
      inRange={false}
      key="January-2017-4-2"
      onClick={[Function]}
      onMouseEnter={[Function]}
      selected={false}
    >
      31
    </Day>
  </Row>
  <Row
    justifyContent="flex-start"
    key="January-2017-5"
  />
</Month>
`;

exports[`<Month/> Localization renders given \`daysOfWeek\` 1`] = `
<Month>
  <Row>
    <Cell>
      <NavButton
        onClick={[Function]}
      >
        ←
      </NavButton>
    </Cell>
    <Cell
      justifyContent="center"
      span={5}
    >
      January 2017
    </Cell>
    <Cell>
      <NavButton
        onClick={[Function]}
      >
        →
      </NavButton>
    </Cell>
  </Row>
  <Row>
    <Cell
      key="January-2017-day-0"
    >
      S
    </Cell>
    <Cell
      key="January-2017-day-1"
    >
      M
    </Cell>
    <Cell
      key="January-2017-day-2"
    >
      T
    </Cell>
    <Cell
      key="January-2017-day-3"
    >
      W
    </Cell>
    <Cell
      key="January-2017-day-4"
    >
      T
    </Cell>
    <Cell
      key="January-2017-day-5"
    >
      F
    </Cell>
    <Cell
      key="January-2017-day-6"
    >
      S
    </Cell>
  </Row>
  <Row
    justifyContent="flex-end"
    key="January-2017-0"
  >
    <Day
      key="January-2017-0-0"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      1
    </Day>
    <Day
      key="January-2017-0-1"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      2
    </Day>
    <Day
      key="January-2017-0-2"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      3
    </Day>
    <Day
      key="January-2017-0-3"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      4
    </Day>
    <Day
      key="January-2017-0-4"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      5
    </Day>
    <Day
      key="January-2017-0-5"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      6
    </Day>
    <Day
      key="January-2017-0-6"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      7
    </Day>
  </Row>
  <Row
    justifyContent="flex-start"
    key="January-2017-1"
  >
    <Day
      key="January-2017-1-0"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      8
    </Day>
    <Day
      key="January-2017-1-1"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      9
    </Day>
    <Day
      key="January-2017-1-2"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      10
    </Day>
    <Day
      key="January-2017-1-3"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      11
    </Day>
    <Day
      key="January-2017-1-4"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      12
    </Day>
    <Day
      key="January-2017-1-5"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      13
    </Day>
    <Day
      key="January-2017-1-6"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      14
    </Day>
  </Row>
  <Row
    justifyContent="flex-start"
    key="January-2017-2"
  >
    <Day
      key="January-2017-2-0"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      15
    </Day>
    <Day
      key="January-2017-2-1"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      16
    </Day>
    <Day
      key="January-2017-2-2"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      17
    </Day>
    <Day
      key="January-2017-2-3"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      18
    </Day>
    <Day
      key="January-2017-2-4"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      19
    </Day>
    <Day
      key="January-2017-2-5"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      20
    </Day>
    <Day
      key="January-2017-2-6"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      21
    </Day>
  </Row>
  <Row
    justifyContent="flex-start"
    key="January-2017-3"
  >
    <Day
      key="January-2017-3-0"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      22
    </Day>
    <Day
      key="January-2017-3-1"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      23
    </Day>
    <Day
      key="January-2017-3-2"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      24
    </Day>
    <Day
      key="January-2017-3-3"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      25
    </Day>
    <Day
      key="January-2017-3-4"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      26
    </Day>
    <Day
      key="January-2017-3-5"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      27
    </Day>
    <Day
      key="January-2017-3-6"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      28
    </Day>
  </Row>
  <Row
    justifyContent="flex-start"
    key="January-2017-4"
  >
    <Day
      key="January-2017-4-0"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      29
    </Day>
    <Day
      key="January-2017-4-1"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      30
    </Day>
    <Day
      key="January-2017-4-2"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      31
    </Day>
  </Row>
  <Row
    justifyContent="flex-start"
    key="January-2017-5"
  />
</Month>
`;

exports[`<Month/> Localization renders given \`monthNames\` 1`] = `
<Month>
  <Row>
    <Cell>
      <NavButton
        onClick={[Function]}
      >
        ←
      </NavButton>
    </Cell>
    <Cell
      justifyContent="center"
      span={5}
    >
      Jan 2017
    </Cell>
    <Cell>
      <NavButton
        onClick={[Function]}
      >
        →
      </NavButton>
    </Cell>
  </Row>
  <Row>
    <Cell
      key="Jan-2017-day-0"
    >
      Su
    </Cell>
    <Cell
      key="Jan-2017-day-1"
    >
      Mo
    </Cell>
    <Cell
      key="Jan-2017-day-2"
    >
      Tu
    </Cell>
    <Cell
      key="Jan-2017-day-3"
    >
      We
    </Cell>
    <Cell
      key="Jan-2017-day-4"
    >
      Th
    </Cell>
    <Cell
      key="Jan-2017-day-5"
    >
      Fr
    </Cell>
    <Cell
      key="Jan-2017-day-6"
    >
      Sa
    </Cell>
  </Row>
  <Row
    justifyContent="flex-end"
    key="Jan-2017-0"
  >
    <Day
      key="Jan-2017-0-0"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      1
    </Day>
    <Day
      key="Jan-2017-0-1"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      2
    </Day>
    <Day
      key="Jan-2017-0-2"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      3
    </Day>
    <Day
      key="Jan-2017-0-3"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      4
    </Day>
    <Day
      key="Jan-2017-0-4"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      5
    </Day>
    <Day
      key="Jan-2017-0-5"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      6
    </Day>
    <Day
      key="Jan-2017-0-6"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      7
    </Day>
  </Row>
  <Row
    justifyContent="flex-start"
    key="Jan-2017-1"
  >
    <Day
      key="Jan-2017-1-0"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      8
    </Day>
    <Day
      key="Jan-2017-1-1"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      9
    </Day>
    <Day
      key="Jan-2017-1-2"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      10
    </Day>
    <Day
      key="Jan-2017-1-3"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      11
    </Day>
    <Day
      key="Jan-2017-1-4"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      12
    </Day>
    <Day
      key="Jan-2017-1-5"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      13
    </Day>
    <Day
      key="Jan-2017-1-6"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      14
    </Day>
  </Row>
  <Row
    justifyContent="flex-start"
    key="Jan-2017-2"
  >
    <Day
      key="Jan-2017-2-0"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      15
    </Day>
    <Day
      key="Jan-2017-2-1"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      16
    </Day>
    <Day
      key="Jan-2017-2-2"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      17
    </Day>
    <Day
      key="Jan-2017-2-3"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      18
    </Day>
    <Day
      key="Jan-2017-2-4"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      19
    </Day>
    <Day
      key="Jan-2017-2-5"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      20
    </Day>
    <Day
      key="Jan-2017-2-6"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      21
    </Day>
  </Row>
  <Row
    justifyContent="flex-start"
    key="Jan-2017-3"
  >
    <Day
      key="Jan-2017-3-0"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      22
    </Day>
    <Day
      key="Jan-2017-3-1"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      23
    </Day>
    <Day
      key="Jan-2017-3-2"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      24
    </Day>
    <Day
      key="Jan-2017-3-3"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      25
    </Day>
    <Day
      key="Jan-2017-3-4"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      26
    </Day>
    <Day
      key="Jan-2017-3-5"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      27
    </Day>
    <Day
      key="Jan-2017-3-6"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      28
    </Day>
  </Row>
  <Row
    justifyContent="flex-start"
    key="Jan-2017-4"
  >
    <Day
      key="Jan-2017-4-0"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      29
    </Day>
    <Day
      key="Jan-2017-4-1"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      30
    </Day>
    <Day
      key="Jan-2017-4-2"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      31
    </Day>
  </Row>
  <Row
    justifyContent="flex-start"
    key="Jan-2017-5"
  />
</Month>
`;

exports[`<Month/> Navigation \`hideNextButton\` hides next button 1`] = `
<Month>
  <Row>
    <Cell>
      <NavButton
        onClick={[Function]}
      >
        ←
      </NavButton>
    </Cell>
    <Cell
      justifyContent="center"
      span={5}
    >
      January 2017
    </Cell>
    <Cell />
  </Row>
  <Row>
    <Cell
      key="January-2017-day-0"
    >
      Su
    </Cell>
    <Cell
      key="January-2017-day-1"
    >
      Mo
    </Cell>
    <Cell
      key="January-2017-day-2"
    >
      Tu
    </Cell>
    <Cell
      key="January-2017-day-3"
    >
      We
    </Cell>
    <Cell
      key="January-2017-day-4"
    >
      Th
    </Cell>
    <Cell
      key="January-2017-day-5"
    >
      Fr
    </Cell>
    <Cell
      key="January-2017-day-6"
    >
      Sa
    </Cell>
  </Row>
  <Row
    justifyContent="flex-end"
    key="January-2017-0"
  >
    <Day
      key="January-2017-0-0"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      1
    </Day>
    <Day
      key="January-2017-0-1"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      2
    </Day>
    <Day
      key="January-2017-0-2"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      3
    </Day>
    <Day
      key="January-2017-0-3"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      4
    </Day>
    <Day
      key="January-2017-0-4"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      5
    </Day>
    <Day
      key="January-2017-0-5"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      6
    </Day>
    <Day
      key="January-2017-0-6"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      7
    </Day>
  </Row>
  <Row
    justifyContent="flex-start"
    key="January-2017-1"
  >
    <Day
      key="January-2017-1-0"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      8
    </Day>
    <Day
      key="January-2017-1-1"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      9
    </Day>
    <Day
      key="January-2017-1-2"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      10
    </Day>
    <Day
      key="January-2017-1-3"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      11
    </Day>
    <Day
      key="January-2017-1-4"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      12
    </Day>
    <Day
      key="January-2017-1-5"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      13
    </Day>
    <Day
      key="January-2017-1-6"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      14
    </Day>
  </Row>
  <Row
    justifyContent="flex-start"
    key="January-2017-2"
  >
    <Day
      key="January-2017-2-0"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      15
    </Day>
    <Day
      key="January-2017-2-1"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      16
    </Day>
    <Day
      key="January-2017-2-2"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      17
    </Day>
    <Day
      key="January-2017-2-3"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      18
    </Day>
    <Day
      key="January-2017-2-4"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      19
    </Day>
    <Day
      key="January-2017-2-5"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      20
    </Day>
    <Day
      key="January-2017-2-6"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      21
    </Day>
  </Row>
  <Row
    justifyContent="flex-start"
    key="January-2017-3"
  >
    <Day
      key="January-2017-3-0"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      22
    </Day>
    <Day
      key="January-2017-3-1"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      23
    </Day>
    <Day
      key="January-2017-3-2"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      24
    </Day>
    <Day
      key="January-2017-3-3"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      25
    </Day>
    <Day
      key="January-2017-3-4"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      26
    </Day>
    <Day
      key="January-2017-3-5"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      27
    </Day>
    <Day
      key="January-2017-3-6"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      28
    </Day>
  </Row>
  <Row
    justifyContent="flex-start"
    key="January-2017-4"
  >
    <Day
      key="January-2017-4-0"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      29
    </Day>
    <Day
      key="January-2017-4-1"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      30
    </Day>
    <Day
      key="January-2017-4-2"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      31
    </Day>
  </Row>
  <Row
    justifyContent="flex-start"
    key="January-2017-5"
  />
</Month>
`;

exports[`<Month/> Navigation \`hidePrevButton\` hides prev button 1`] = `
<Month>
  <Row>
    <Cell />
    <Cell
      justifyContent="center"
      span={5}
    >
      January 2017
    </Cell>
    <Cell>
      <NavButton
        onClick={[Function]}
      >
        →
      </NavButton>
    </Cell>
  </Row>
  <Row>
    <Cell
      key="January-2017-day-0"
    >
      Su
    </Cell>
    <Cell
      key="January-2017-day-1"
    >
      Mo
    </Cell>
    <Cell
      key="January-2017-day-2"
    >
      Tu
    </Cell>
    <Cell
      key="January-2017-day-3"
    >
      We
    </Cell>
    <Cell
      key="January-2017-day-4"
    >
      Th
    </Cell>
    <Cell
      key="January-2017-day-5"
    >
      Fr
    </Cell>
    <Cell
      key="January-2017-day-6"
    >
      Sa
    </Cell>
  </Row>
  <Row
    justifyContent="flex-end"
    key="January-2017-0"
  >
    <Day
      key="January-2017-0-0"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      1
    </Day>
    <Day
      key="January-2017-0-1"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      2
    </Day>
    <Day
      key="January-2017-0-2"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      3
    </Day>
    <Day
      key="January-2017-0-3"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      4
    </Day>
    <Day
      key="January-2017-0-4"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      5
    </Day>
    <Day
      key="January-2017-0-5"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      6
    </Day>
    <Day
      key="January-2017-0-6"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      7
    </Day>
  </Row>
  <Row
    justifyContent="flex-start"
    key="January-2017-1"
  >
    <Day
      key="January-2017-1-0"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      8
    </Day>
    <Day
      key="January-2017-1-1"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      9
    </Day>
    <Day
      key="January-2017-1-2"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      10
    </Day>
    <Day
      key="January-2017-1-3"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      11
    </Day>
    <Day
      key="January-2017-1-4"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      12
    </Day>
    <Day
      key="January-2017-1-5"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      13
    </Day>
    <Day
      key="January-2017-1-6"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      14
    </Day>
  </Row>
  <Row
    justifyContent="flex-start"
    key="January-2017-2"
  >
    <Day
      key="January-2017-2-0"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      15
    </Day>
    <Day
      key="January-2017-2-1"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      16
    </Day>
    <Day
      key="January-2017-2-2"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      17
    </Day>
    <Day
      key="January-2017-2-3"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      18
    </Day>
    <Day
      key="January-2017-2-4"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      19
    </Day>
    <Day
      key="January-2017-2-5"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      20
    </Day>
    <Day
      key="January-2017-2-6"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      21
    </Day>
  </Row>
  <Row
    justifyContent="flex-start"
    key="January-2017-3"
  >
    <Day
      key="January-2017-3-0"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      22
    </Day>
    <Day
      key="January-2017-3-1"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      23
    </Day>
    <Day
      key="January-2017-3-2"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      24
    </Day>
    <Day
      key="January-2017-3-3"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      25
    </Day>
    <Day
      key="January-2017-3-4"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      26
    </Day>
    <Day
      key="January-2017-3-5"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      27
    </Day>
    <Day
      key="January-2017-3-6"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      28
    </Day>
  </Row>
  <Row
    justifyContent="flex-start"
    key="January-2017-4"
  >
    <Day
      key="January-2017-4-0"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      29
    </Day>
    <Day
      key="January-2017-4-1"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      30
    </Day>
    <Day
      key="January-2017-4-2"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      31
    </Day>
  </Row>
  <Row
    justifyContent="flex-start"
    key="January-2017-5"
  />
</Month>
`;

exports[`<Month/> Navigation shows dropdowns for navigation 1`] = `
<Month>
  <Row>
    <Cell>
      <NavButton
        onClick={[Function]}
      >
        ←
      </NavButton>
    </Cell>
    <Cell
      justifyContent="space-around"
      span={5}
    >
      <Select
        key="months"
        onChange={[Function]}
        value={0}
      >
        <option
          key="0"
          value={0}
        >
          January
        </option>
        <option
          key="1"
          value={1}
        >
          February
        </option>
        <option
          key="2"
          value={2}
        >
          March
        </option>
        <option
          key="3"
          value={3}
        >
          April
        </option>
        <option
          key="4"
          value={4}
        >
          May
        </option>
        <option
          key="5"
          value={5}
        >
          June
        </option>
        <option
          key="6"
          value={6}
        >
          July
        </option>
        <option
          key="7"
          value={7}
        >
          August
        </option>
        <option
          key="8"
          value={8}
        >
          September
        </option>
        <option
          key="9"
          value={9}
        >
          October
        </option>
        <option
          key="10"
          value={10}
        >
          November
        </option>
        <option
          key="11"
          value={11}
        >
          December
        </option>
      </Select>
      <Select
        key="years"
        onChange={[Function]}
        value={2017}
      >
        <option
          key="1967"
          value={1967}
        >
          1967
        </option>
        <option
          key="1968"
          value={1968}
        >
          1968
        </option>
        <option
          key="1969"
          value={1969}
        >
          1969
        </option>
        <option
          key="1970"
          value={1970}
        >
          1970
        </option>
        <option
          key="1971"
          value={1971}
        >
          1971
        </option>
        <option
          key="1972"
          value={1972}
        >
          1972
        </option>
        <option
          key="1973"
          value={1973}
        >
          1973
        </option>
        <option
          key="1974"
          value={1974}
        >
          1974
        </option>
        <option
          key="1975"
          value={1975}
        >
          1975
        </option>
        <option
          key="1976"
          value={1976}
        >
          1976
        </option>
        <option
          key="1977"
          value={1977}
        >
          1977
        </option>
        <option
          key="1978"
          value={1978}
        >
          1978
        </option>
        <option
          key="1979"
          value={1979}
        >
          1979
        </option>
        <option
          key="1980"
          value={1980}
        >
          1980
        </option>
        <option
          key="1981"
          value={1981}
        >
          1981
        </option>
        <option
          key="1982"
          value={1982}
        >
          1982
        </option>
        <option
          key="1983"
          value={1983}
        >
          1983
        </option>
        <option
          key="1984"
          value={1984}
        >
          1984
        </option>
        <option
          key="1985"
          value={1985}
        >
          1985
        </option>
        <option
          key="1986"
          value={1986}
        >
          1986
        </option>
        <option
          key="1987"
          value={1987}
        >
          1987
        </option>
        <option
          key="1988"
          value={1988}
        >
          1988
        </option>
        <option
          key="1989"
          value={1989}
        >
          1989
        </option>
        <option
          key="1990"
          value={1990}
        >
          1990
        </option>
        <option
          key="1991"
          value={1991}
        >
          1991
        </option>
        <option
          key="1992"
          value={1992}
        >
          1992
        </option>
        <option
          key="1993"
          value={1993}
        >
          1993
        </option>
        <option
          key="1994"
          value={1994}
        >
          1994
        </option>
        <option
          key="1995"
          value={1995}
        >
          1995
        </option>
        <option
          key="1996"
          value={1996}
        >
          1996
        </option>
        <option
          key="1997"
          value={1997}
        >
          1997
        </option>
        <option
          key="1998"
          value={1998}
        >
          1998
        </option>
        <option
          key="1999"
          value={1999}
        >
          1999
        </option>
        <option
          key="2000"
          value={2000}
        >
          2000
        </option>
        <option
          key="2001"
          value={2001}
        >
          2001
        </option>
        <option
          key="2002"
          value={2002}
        >
          2002
        </option>
        <option
          key="2003"
          value={2003}
        >
          2003
        </option>
        <option
          key="2004"
          value={2004}
        >
          2004
        </option>
        <option
          key="2005"
          value={2005}
        >
          2005
        </option>
        <option
          key="2006"
          value={2006}
        >
          2006
        </option>
        <option
          key="2007"
          value={2007}
        >
          2007
        </option>
        <option
          key="2008"
          value={2008}
        >
          2008
        </option>
        <option
          key="2009"
          value={2009}
        >
          2009
        </option>
        <option
          key="2010"
          value={2010}
        >
          2010
        </option>
        <option
          key="2011"
          value={2011}
        >
          2011
        </option>
        <option
          key="2012"
          value={2012}
        >
          2012
        </option>
        <option
          key="2013"
          value={2013}
        >
          2013
        </option>
        <option
          key="2014"
          value={2014}
        >
          2014
        </option>
        <option
          key="2015"
          value={2015}
        >
          2015
        </option>
        <option
          key="2016"
          value={2016}
        >
          2016
        </option>
        <option
          key="2017"
          value={2017}
        >
          2017
        </option>
        <option
          key="2018"
          value={2018}
        >
          2018
        </option>
        <option
          key="2019"
          value={2019}
        >
          2019
        </option>
        <option
          key="2020"
          value={2020}
        >
          2020
        </option>
        <option
          key="2021"
          value={2021}
        >
          2021
        </option>
      </Select>
    </Cell>
    <Cell>
      <NavButton
        onClick={[Function]}
      >
        →
      </NavButton>
    </Cell>
  </Row>
  <Row>
    <Cell
      key="January-2017-day-0"
    >
      Su
    </Cell>
    <Cell
      key="January-2017-day-1"
    >
      Mo
    </Cell>
    <Cell
      key="January-2017-day-2"
    >
      Tu
    </Cell>
    <Cell
      key="January-2017-day-3"
    >
      We
    </Cell>
    <Cell
      key="January-2017-day-4"
    >
      Th
    </Cell>
    <Cell
      key="January-2017-day-5"
    >
      Fr
    </Cell>
    <Cell
      key="January-2017-day-6"
    >
      Sa
    </Cell>
  </Row>
  <Row
    justifyContent="flex-end"
    key="January-2017-0"
  >
    <Day
      key="January-2017-0-0"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      1
    </Day>
    <Day
      key="January-2017-0-1"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      2
    </Day>
    <Day
      key="January-2017-0-2"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      3
    </Day>
    <Day
      key="January-2017-0-3"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      4
    </Day>
    <Day
      key="January-2017-0-4"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      5
    </Day>
    <Day
      key="January-2017-0-5"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      6
    </Day>
    <Day
      key="January-2017-0-6"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      7
    </Day>
  </Row>
  <Row
    justifyContent="flex-start"
    key="January-2017-1"
  >
    <Day
      key="January-2017-1-0"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      8
    </Day>
    <Day
      key="January-2017-1-1"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      9
    </Day>
    <Day
      key="January-2017-1-2"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      10
    </Day>
    <Day
      key="January-2017-1-3"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      11
    </Day>
    <Day
      key="January-2017-1-4"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      12
    </Day>
    <Day
      key="January-2017-1-5"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      13
    </Day>
    <Day
      key="January-2017-1-6"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      14
    </Day>
  </Row>
  <Row
    justifyContent="flex-start"
    key="January-2017-2"
  >
    <Day
      key="January-2017-2-0"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      15
    </Day>
    <Day
      key="January-2017-2-1"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      16
    </Day>
    <Day
      key="January-2017-2-2"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      17
    </Day>
    <Day
      key="January-2017-2-3"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      18
    </Day>
    <Day
      key="January-2017-2-4"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      19
    </Day>
    <Day
      key="January-2017-2-5"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      20
    </Day>
    <Day
      key="January-2017-2-6"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      21
    </Day>
  </Row>
  <Row
    justifyContent="flex-start"
    key="January-2017-3"
  >
    <Day
      key="January-2017-3-0"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      22
    </Day>
    <Day
      key="January-2017-3-1"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      23
    </Day>
    <Day
      key="January-2017-3-2"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      24
    </Day>
    <Day
      key="January-2017-3-3"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      25
    </Day>
    <Day
      key="January-2017-3-4"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      26
    </Day>
    <Day
      key="January-2017-3-5"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      27
    </Day>
    <Day
      key="January-2017-3-6"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      28
    </Day>
  </Row>
  <Row
    justifyContent="flex-start"
    key="January-2017-4"
  >
    <Day
      key="January-2017-4-0"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      29
    </Day>
    <Day
      key="January-2017-4-1"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      30
    </Day>
    <Day
      key="January-2017-4-2"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      31
    </Day>
  </Row>
  <Row
    justifyContent="flex-start"
    key="January-2017-5"
  />
</Month>
`;

exports[`<Month/> renders given month 1`] = `
<Month>
  <Row>
    <Cell>
      <NavButton
        onClick={[Function]}
      >
        ←
      </NavButton>
    </Cell>
    <Cell
      justifyContent="center"
      span={5}
    >
      January 2017
    </Cell>
    <Cell>
      <NavButton
        onClick={[Function]}
      >
        →
      </NavButton>
    </Cell>
  </Row>
  <Row>
    <Cell
      key="January-2017-day-0"
    >
      Su
    </Cell>
    <Cell
      key="January-2017-day-1"
    >
      Mo
    </Cell>
    <Cell
      key="January-2017-day-2"
    >
      Tu
    </Cell>
    <Cell
      key="January-2017-day-3"
    >
      We
    </Cell>
    <Cell
      key="January-2017-day-4"
    >
      Th
    </Cell>
    <Cell
      key="January-2017-day-5"
    >
      Fr
    </Cell>
    <Cell
      key="January-2017-day-6"
    >
      Sa
    </Cell>
  </Row>
  <Row
    justifyContent="flex-end"
    key="January-2017-0"
  >
    <Day
      key="January-2017-0-0"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      1
    </Day>
    <Day
      key="January-2017-0-1"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      2
    </Day>
    <Day
      key="January-2017-0-2"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      3
    </Day>
    <Day
      key="January-2017-0-3"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      4
    </Day>
    <Day
      key="January-2017-0-4"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      5
    </Day>
    <Day
      key="January-2017-0-5"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      6
    </Day>
    <Day
      key="January-2017-0-6"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      7
    </Day>
  </Row>
  <Row
    justifyContent="flex-start"
    key="January-2017-1"
  >
    <Day
      key="January-2017-1-0"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      8
    </Day>
    <Day
      key="January-2017-1-1"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      9
    </Day>
    <Day
      key="January-2017-1-2"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      10
    </Day>
    <Day
      key="January-2017-1-3"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      11
    </Day>
    <Day
      key="January-2017-1-4"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      12
    </Day>
    <Day
      key="January-2017-1-5"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      13
    </Day>
    <Day
      key="January-2017-1-6"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      14
    </Day>
  </Row>
  <Row
    justifyContent="flex-start"
    key="January-2017-2"
  >
    <Day
      key="January-2017-2-0"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      15
    </Day>
    <Day
      key="January-2017-2-1"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      16
    </Day>
    <Day
      key="January-2017-2-2"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      17
    </Day>
    <Day
      key="January-2017-2-3"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      18
    </Day>
    <Day
      key="January-2017-2-4"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      19
    </Day>
    <Day
      key="January-2017-2-5"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      20
    </Day>
    <Day
      key="January-2017-2-6"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      21
    </Day>
  </Row>
  <Row
    justifyContent="flex-start"
    key="January-2017-3"
  >
    <Day
      key="January-2017-3-0"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      22
    </Day>
    <Day
      key="January-2017-3-1"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      23
    </Day>
    <Day
      key="January-2017-3-2"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      24
    </Day>
    <Day
      key="January-2017-3-3"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      25
    </Day>
    <Day
      key="January-2017-3-4"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      26
    </Day>
    <Day
      key="January-2017-3-5"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      27
    </Day>
    <Day
      key="January-2017-3-6"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      28
    </Day>
  </Row>
  <Row
    justifyContent="flex-start"
    key="January-2017-4"
  >
    <Day
      key="January-2017-4-0"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      29
    </Day>
    <Day
      key="January-2017-4-1"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      30
    </Day>
    <Day
      key="January-2017-4-2"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      31
    </Day>
  </Row>
  <Row
    justifyContent="flex-start"
    key="January-2017-5"
  />
</Month>
`;
